Catching up changes made by ashoke (#24)
* Catching up changes made by ashoke

* Shading changes and always sample the egress calls when not ingress is associated

* Java 1.8 changes and review comments incorporation

* Addressing review comment from prasad

Co-authored-by: muthumani <muthumani@muthumanis-MacBook-Pro.local>